TestSuite/errors/err0187.pas
 	 uses System;
constructor Console.Create;
begin
  
end;

begin
  
end. 